--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/baguetteBox.min.css">
     <script src="js/baguetteBox.min.js"></script>
+    <script src="js/searchFilter.js"></script>
 </head>
 <body>
     <header>
