remove form element

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <header>
-        <form action="">
-        <!-- <label for="image-search">Search the gallery</label> -->
+      <div class="input-container">
         <input type="search" id="image-search" name="image-search" placeholder="Search">
-    </form>
+      </div>
+        <!-- <label for="image-search">Search the gallery</label> -->
+      
 </header>
 <main>
     <section class="gallery-container">
